implemented core functionality, directions now inputtable

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -7,6 +7,12 @@ body {
 a {
   color: #00B7FF; }
 
+.map-canvas {
+  width: 100%; }
+
+.p5Canvas {
+  width: 100% !important; }
+
 .panel {
   background: lightgray; }
 
