--- a/views/layout.pug
+++ b/views/layout.pug
@@ -6,6 +6,8 @@ html
     link(rel='stylesheet', href='/css/bootstrap.min.css')
   body
     block content
+
+    script(src='/jquery.min.js')
     script(src='/js/bootstrap.min.js')
     script(src='/scripts/p5.js')
     script(src='/javascripts/sketch.js')
