--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -22,3 +22,43 @@ button
 
 .wrapper
   padding: 5px !important
+
+//.scrollbar
+//  margin-left: 30px
+//  float: left
+//  height: 300px
+//  width: 65px
+//  background: #fff
+//  overflow-y: scroll
+//  margin-bottom: 25px
+//
+//.scrollbar-primary::-webkit-scrollbar
+//  width: 12px
+//  background-color: #F5F5F5
+//
+//.scrollbar-primary::-webkit-scrollbar-thumb
+//  border-radius: 10px
+//  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1)
+//  background-color: #4285F4
+
+.list-group
+  max-height: 300px
+  overflow-y: scroll
+
+.list-group::-webkit-scrollbar
+  width: 0px  /* remove scrollbar space */
+  background: transparent  /* optional: just make scrollbar invisible */
+
+
+.list-group-item
+  height: 0
+
+.show
+  height: auto
+
+.slide-fade li
+  transition: all 0.4s ease-out
+  opacity: 0
+
+.slide-fade li.show
+  opacity: 1
