implemented undo button, streamlined history list

--- a/views/index.pug
+++ b/views/index.pug
@@ -11,7 +11,7 @@ block content
           h1= title
           div.container
             div.row
-              div.col-8
+              div.col-9
                 div.container
                   div.row
                     div.col-4.wrapper
@@ -34,5 +34,5 @@ block content
                       button.btn.btn-outline-primary#southButton S
                     div.col-4.wrapper
                       button.btn.btn-outline-secondary Drone
-              div.col-4
-                ul.list-group.slide-fade#moveList
+              div.col-3
+                ul.list-group.slide-fade.scrollbar.scrollbar-primary#moveList
