--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -23,13 +23,27 @@ button {
 .wrapper {
   padding: 5px !important; }
 
-.list-group {
-  max-height: 300px;
-  overflow-y: scroll; }
+.scrollbar {
+  margin-left: 30px;
+  float: left;
+  height: 300px;
+  width: 65px;
+  background: #fff;
+  overflow-y: scroll;
+  margin-bottom: 25px; }
 
-.list-group::-webkit-scrollbar {
-  width: 0px;
-  background: transparent; }
+.scrollbar-primary::-webkit-scrollbar {
+  width: 12px;
+  background-color: #F5F5F5; }
+
+.scrollbar-primary::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+  background-color: #4285F4; }
+
+.list-group {
+  max-height: 542px;
+  overflow-y: auto; }
 
 .list-group-item {
   height: 0; }
