button handling and start of sonar implementation

--- a/views/index.pug
+++ b/views/index.pug
@@ -17,22 +17,22 @@ block content
                     div.col-4.wrapper
                       button.btn.btn-outline-secondary#undoButton Undo
                     div.col-4.wrapper
-                      button.btn.btn-outline-primary#northButton N
+                      button.btn.btn-outline-primary#northButton North
                     div.col-4.wrapper
                       button.btn.btn-outline-secondary#resetButton Reset
                   div.row
                     div.col-4.wrapper
-                      button.btn.btn-outline-primary#westButton W
+                      button.btn.btn-outline-primary#westButton West
                     div.col-4.wrapper
                       button.btn.btn-outline-secondary#stealthButton Stealth
                     div.col-4.wrapper
-                      button.btn.btn-outline-primary#eastButton E
+                      button.btn.btn-outline-primary#eastButton East
                   div.row
                     div.col-4.wrapper
-                      button.btn.btn-outline-secondary Sonar
+                      button.btn.btn-outline-secondary#sonarButton Sonar
                     div.col-4.wrapper
-                      button.btn.btn-outline-primary#southButton S
+                      button.btn.btn-outline-primary#southButton South
                     div.col-4.wrapper
-                      button.btn.btn-outline-secondary Drone
+                      button.btn.btn-outline-secondary#droneButton Drone
               div.col-3
                 ul.list-group.slide-fade.scrollbar.scrollbar-primary#moveList
